--- a/src/app/task-details/task-details.component.scss
+++ b/src/app/task-details/task-details.component.scss
@@ -19,6 +19,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    word-wrap: break-word;
+    white-space: normal;
  }
 
  .content {
